--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,279 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+nav.navbar {
+  
+  position: absolute;
+  width: 100%;
+  z-index: 99;
+}
+.menuButton{
+  background: linear-gradient(99.53deg, #FFE600 -166.03%, #FF3D00 168.83%);
+  border: none !important;
+  border-radius: 2px !important;
+}
+.menunav{
+  background: #FFFFFF24;
+  border: none !important;
+  border-radius: 2px !important;
+
+}
+.hero-left{
+  background: url(./components/assets/banner/leftHero.png) no-repeat;
+  border: none !important;
+  border-radius: 2px !important;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  height: 500px;
+  background-size: 100% 100%;
+  padding-bottom: 22px;
+}
+.hero-right{
+  /* background-size: 100% 100% !important; */
+  background: url(./components/assets/banner/rightHero.png) no-repeat;
+  border: none !important;
+  border-radius: 2px !important;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  height: 500px;
+  background-size: 100% 100%;
+  padding-bottom: 22px;
+}
+
+.menunav.navbar-nav a.nav-link {
+  color: white;
+  padding: 15px;
+  font-size: 18px;
+}
+@media only screen and (max-width: 768px) {
+
+.menunav {
+  background: #000000;
+}
+}
+section.hero{
+  background-color: #1F1F1F;
+}
+.secondSection .secondSectionRight{
+  color: white;
+  text-align: left;
+}
+section.secondSection{
+  background: #1F1F1F;
+  padding: 100px 100px;
+  color: white;
+}
+section.oursolarwork{
+  background: #1F1F1F;
+  padding: 55px 48px;
+  color: white;
+}
+.secondSection .secondSectionRight h2{
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%),
+linear-gradient(0deg, #FFFFFF, #FFFFFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;   
+}
+.oursolarwork .oursolarwork-left{
+  font-size: 40px;
+  height: 480px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  padding: 50px 125px 50px 20px;
+  border-radius: 7px;
+  background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%);
+  
+}
+.oursolarwork-right {
+  transform: translate(-130px, 0px);
+}
+/* .oursolarworkfirst{
+  height: 536px;
+
+} */
+.oursolarwork .btnwork{
+  background-color: #FFFFFF;
+  font-family: Urbanist;
+  font-size: 22px;
+  font-weight: 500;
+
+      border: none;
+    border-radius: 3px;
+    padding: 15px 30px;
+    color: #1F1F1F;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.oursolarwork .oursolarwork-left h2{
+  font-family: Urbanist;
+font-size: 45px;
+font-weight: 700;
+line-height: 49px;
+letter-spacing: 0em;
+text-align: left;
+
+}   
+.oursolarwork .oursolarwork-left p{
+  
+  font-family: Urbanist;
+  font-size: 23px;
+  font-weight: 500;
+  line-height: 33px;
+  letter-spacing: 0em;
+  text-align: left;
+  
+}
+.secondSection .secondSectionRight p{
+  font-family: Urbanist;
+  font-size: 23px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: left;
+  
+}
+.secondSection .secondSectionRight button{
+  background: linear-gradient(99.53deg, #FFE600 -166.03%, #FF3D00 168.83%);
+  border: none;
+  border-radius: 3px;
+  padding: 15px 30px;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+.swiper-slide.swiper-slide-next {
+
+  display: flex;
+  height: 499px !important;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+.swiper-wrapper{
+  align-items: center;
+}
+.swiper-button-prev:after, .swiper-button-next:after{
+  font-weight: 900;
+  color: white !important;
+}
+.InquiriesSection{
+  background-color: #1F1F1F;
+  padding: 55px 48px;
+}
+.CultivateSection{
+  background-color: #1F1F1F;
+  background-image: linear-gradient(to right, rgb(0 0 0 / 44%), rgb(0 0 0 / 32%)), url(./components/assets/banner/Cultivate.png);
+  background-size: 100% 100%;
+  padding: 55px 48px;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  color: white;
+}
+.CultivateSection h2{
+  font-family: Urbanist;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 89px;
+  letter-spacing: 0em;
+  text-align: left;
+  
+}
+.CultivateSection p{
+  font-family: Urbanist;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: left;  
+}
+.InquiriesSection h2{
+  font-family: Urbanist;
+  font-size: 40px;
+  font-weight: 900;
+  /* line-height: 89px; */
+  /* letter-spacing: 0em; */
+  text-align: left;
+  background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.InquiriesSection .contactUs{
+  border: 4px solid;
+  background-color: #000;
+  padding: 55px 48px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+}
+.border-gradient {
+  border: 3px solid !important;
+  border-radius: 2px;
+  border-image-slice: 1 !important;
+  border-width: 7px !important;
+  /* border-radius: 32px; */
+}
+.border-gradient-purple {
+
+  border-image-source: linear-gradient(to right, #FFE600 -32.66%, #FF3D00 101.88%) !important;
+}
+
+.form {
+  background: radial-gradient(
+    81.52% 81.52% at 67.33% 85.84%,
+    #fff7f7 0%,
+    #fff3fc 100%
+  );
+  box-shadow: 0px 59px 44px -27px rgba(0, 0, 0, 0.2),
+    inset 4px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 40px;
+}
+.inputBg {
+  background: #000;
+  box-shadow: 12px 0px 25px -8px rgba(224, 175, 207, 0.5);
+}
+.contactUs.border-gradient.inputBg p{
+  font-family: Poppins;
+font-size: 20px;
+font-weight: 400;
+line-height: 43px;
+letter-spacing: 0em;
+text-align: center;
+color: #FFFFFF;
+}
+.contactUsTitle {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.col-lg-6.oursolarworker {
+  text-align: left;
+}
+.form-control::-webkit-input-placeholder {
+  color: white;
+}
+.form-control {
+  background: none !important;
+  border: none !important;
+  border-bottom: 2px solid #fff !important;
+  border-radius: 0px !important;
+  color: white !important;
+  font-weight: 900 !important;
+  padding: 0px !important;
+}
+.form-label {
+  margin-top: 20px;
+}
