--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 body {
+  background: #1f1f1f !important;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Urbanist", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -15,6 +15,250 @@ nav.navbar {
   position: absolute;
   width: 100%;
   z-index: 99;
+}
+
+/* responsive start */
+@media only screen and (max-width: 768px) {
+  .hero-rightMain{
+    height: 50vh !important;
+  }
+  .hero-leftMain{
+    height: 50vh !important;
+  }
+  .hero-left{
+    height: 50vh !important;
+  }
+  .hero-right{
+    height: 50vh !important;
+  }
+  .engineeringServices {
+    padding: 15px 15px 46px !important;
+}
+section.counter{
+  padding: 15px 15px 46px !important;
+  background-color: #1F1F1F;
+}
+section.map-inquiry{
+  padding: 15px 15px 46px !important;
+  background-color: #1F1F1F;
+}
+section.AboutVtv{
+  padding: 15px 15px 46px !important;
+  background-color: #1F1F1F;
+}
+section.aboutVtv{
+  padding: 15px 15px 46px !important;
+
+}
+section.TabSec{
+  padding: 15px 15px 46px !important;
+  background-color: #1F1F1F;
+}
+section.WhyVTVEnergy{
+  padding: 15px 15px 46px !important;
+  background-color: #1F1F1F;
+}
+.InquiriesSectionSupport {
+  background-color: #1F1F1F;
+  padding: 24px 7px !important;
+}
+section.footerSection{
+  padding: 60px 6px 0px 6px !important;
+}
+section.secondSection .secondSectionLeft img{
+  object-fit: cover;
+  width: 100% !important;
+}
+.secondSection .secondSectionRight h2 {
+  font-size: 30px !important;
+}
+section.secondSection {
+  padding: 15px 15px 46px !important;
+}
+section.oursolarwork {
+  padding: 15px 15px 46px !important;
+}
+.oursolarwork .oursolarwork-left{
+  padding: 20px 20px 20px 20px !important;
+    height: 558px !important;
+    align-items: flex-start !important;
+}
+.oursolarwork-right {
+  transform: translate(0px, -157px) !important;
+}
+.CultivateSection {
+  padding: 15px 15px 46px !important;
+}
+.CultivateSection h2 {
+  font-size: 36px !important;
+}
+.oursolarwork .btnwork{
+  padding: 11px 26px !important;
+  font-size: 18px !important;
+}
+.InquiriesSection {
+  padding: 15px 15px 46px !important;
+}
+.InquiriesSection h2 {
+  font-size: 30px !important;
+}
+.leaflet-container.leaflet-touch.leaflet-retina.leaflet-safari.leaflet-fade-anim.leaflet-grab.leaflet-touch-drag.leaflet-touch-zoom {
+  height: 333px !important;
+}
+.border-footer{
+border-left: 0px solid !important;
+}
+.navbar-brand img {
+  width: 136px;
+}
+.hero-leftWind .WindText {
+  font-size: 30px !important;
+}
+.oursolarwork .oursolarwork-left h2{
+  font-size: 30px !important;
+
+}
+section.oursolarworkWind {
+  padding: 0px 16px 0px !important;
+}
+.oursolarworkWind .oursolarwork-leftWind{
+  padding: 20px 20px 20px 20px !important;
+}
+.oursolarworkWind form label{
+  margin-bottom: 10px !important;
+}
+.oursolarworkWind form img{
+  object-fit: cover !important;
+  width: 100% !important;
+}
+.oursolarworkWind form{
+width: 100% !important;
+}
+.full-withradius{
+  padding: 14px 11px !important;
+}
+.footerSection .footerMenu ul li{
+  list-style: circle;
+}
+.dert .socialIcon {
+  display: flex;
+  justify-content: center !important;
+  gap: 20px;
+}
+.dert .socialIcon .icon {
+  padding: 7px !important;
+  width: 19px !important;
+  height: 19px !important;
+}
+.footerMenu .cont{
+  list-style: none !important;
+}
+.footerContact .footerMenu li{
+  list-style: none !important;
+}
+.engineeringServices .serviceEn h2{
+  font-size: 30px !important;
+}
+p{
+  font-size: 16px !important;
+}
+.count-box span {
+  font-family: "Urbanist", sans-serif;
+  font-size: 66px !important;
+}
+section.vtvEnergy .bgvtv {
+  height: 227px !important;
+}
+section.vtvEnergy .bgvtv h2 {
+  font-family: "Urbanist", sans-serif;
+  font-size: 38px !important;
+}
+section.aboutVtv .engineeringServicesmain .serviceEn h2 {
+  font-size: 30px !important;
+}
+section.aboutVtv .engineeringServicesmain div.row {
+  flex-direction: column-reverse;
+}
+section.aboutVtv .engineeringServicesmain .box-innertab h2 {
+  font-size: 30px !important;
+}
+section.aboutVtv .engineeringServicesmain .box-innertab p{
+  line-height: 26px !important;
+}
+.carddff {
+  min-width: -webkit-fill-available;
+
+  margin-top: 20px !important;
+}
+section.featureProjects{
+  padding: 15px 15px 46px !important;
+}
+section.whyVtv{
+  padding: 15px 15px 46px !important;
+
+}
+section.featureProjects h2 {
+  font-size: 30px !important;
+}
+.featureProjects ul.mb-3.nav.nav-tabs{
+  float: right !important;
+}
+section.whyVtv .texter h2 {
+  font-size: 30px !important;
+}
+.formbutttontt .form-control::-webkit-input-placeholder {
+  font-size: large !important;
+}
+
+section.WhyVTVEnergy .EnergyLeft h2 {
+  font-size: 30px !important;
+}
+section.WhyVTVEnergy .EnergyRight img {
+  object-fit: cover !important;
+  width: 100% !important;
+}
+.AboutVtv .serviceEn h2 {
+  font-size: 30px !important;
+}
+.AboutVtv .container.engineeringServicesmain .col-lg-12 img{
+  object-fit: cover !important;
+  width: 100% !important;
+}
+.missionButton{
+  padding: 11px 26px !important;
+}
+.secondSection .secondSectionRight button{
+  padding: 11px 26px !important;
+}
+.oursolarwork .oursolarworkfirst .btnwork{
+  padding: 11px 26px !important;
+}
+.box-innertab h2{
+  font-size: 15px !important;
+}
+.InquiriesSectionSupport h2 {
+  font-size: 30px !important;
+}
+section.map-inquiry h2 {
+  font-size: 28px !important;
+}
+section.map-inquiry .col-lg-12.col-md-6.col-sm-12>div{
+  flex-direction: column !important;
+  align-items: center;
+}
+.hero-leftContact{
+  height: 265px !important;
+}
+.hero-leftWhyVTV{
+  height: 265px !important;
+}
+.hero-leftWind{
+  height: 365px !important;
+}
+}
+/* responsive end */
+.border-footer{
+  border-left: 1px solid white;
 }
 .menuButton{
   padding: 12px 0px !important;
@@ -84,7 +328,7 @@ nav.navbar {
   padding-bottom: 5px;
   width: fit-content;
   border-bottom: 2px solid white;
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 55px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -102,7 +346,7 @@ linear-gradient(0deg, #FFFFFF, #FFFFFF);
   padding-bottom: 5px;
   width: fit-content;
   border-bottom: 2px solid white;
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 55px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -188,6 +432,39 @@ linear-gradient(0deg, #FFFFFF, #FFFFFF);
   background-size: 100% 100%;
   padding-bottom: 45px;
 }
+.hero-leftContact:hover {
+  cursor: pointer;
+  background-image: linear-gradient(to right, rgb(0 0 0 / 55%), rgb(0 0 0 / 55%)), url(./components/assets/banner/contact.png);  
+  border: none !important;
+  border-radius: 2px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  background-size: 100% 100%;
+  animation: fadeIn 5s;
+  transition-duration: 0.5s;
+}
+.hero-leftContact .WindText{
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+.hero-leftContact{
+  background: url(./components/assets/banner/contact.png) no-repeat;
+  border: none !important;
+  border-radius: 2px !important;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  height: 500px;
+  background-size: 100% 100%;
+  padding-bottom: 45px;
+}
 .hero-right:hover {
   cursor: pointer;
   background-image: linear-gradient(to right, rgb(0 0 0 / 55%), rgb(0 0 0 / 55%)), url(./components/assets/banner/residential.gif);  
@@ -254,11 +531,11 @@ button.btnwork:hover {
   color: #ff8027;
 }
 button{
-  font-family: Urbanist !important;
+  font-family: "Urbanist", sans-serif !important;
 }
 .oursolarwork .oursolarworkfirst .btnwork{
   background: white;
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 22px;
   font-weight: 500;
 
@@ -295,7 +572,7 @@ button{
   padding-bottom: 22px;
 }
 .paraBG{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-weight: 900;
   /* line-height: 89px; */
   /* letter-spacing: 0em; */
@@ -322,11 +599,19 @@ section.counter{
   padding: 55px 48px;
   background-color: #1F1F1F;
 }
+section.map-inquiry{
+  padding: 55px 48px;
+  background-color: #1F1F1F;
+}
 section.AboutVtv{
   padding: 55px 48px;
   background-color: #1F1F1F;
 }
 section.TabSec{
+  padding: 55px 48px;
+  background-color: #1F1F1F;
+}
+section.WhyVTVEnergy{
   padding: 55px 48px;
   background-color: #1F1F1F;
 }
@@ -345,12 +630,9 @@ section.WhyVTVEnergy .EnergyLeft{
   align-items: flex-start;
   text-align: left;
 }
-section.WhyVTVEnergy{
-  padding: 55px 48px;
-  background-color: #1F1F1F;
-}
+
 section.featureProjects h2{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
 font-size: 64px;
 font-weight: 900;
 line-height: 86px;
@@ -378,7 +660,7 @@ section.whyVtv .texter h2{
   width: -moz-fit-content;
   width: fit-content;
   border-bottom: 2px solid white;
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 55px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -441,7 +723,7 @@ linear-gradient(0deg, #FFFFFF, #FFFFFF);
   
 }
 .oursolarwork .oursolarwork-left h2{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
 font-size: 45px;
 font-weight: 700;
 line-height: 49px;
@@ -451,7 +733,7 @@ text-align: left;
 }   
 .oursolarwork .oursolarwork-left p{
   
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 23px;
   font-weight: 500;
   line-height: 33px;
@@ -496,7 +778,7 @@ text-align: left;
 } */
 .oursolarwork .btnwork{
   background: linear-gradient(99.53deg, #FFE600 -166.03%, #FF3D00 168.83%);
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 22px;
   font-weight: 500;
 
@@ -509,7 +791,7 @@ text-align: left;
     margin-top: 20px;
 }
 .oursolarworkWind .oursolarwork-leftWind h2{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
 font-size: 45px;
 font-weight: 700;
 line-height: 49px;
@@ -519,7 +801,7 @@ letter-spacing: 0em;
 }   
 .oursolarworkWind .oursolarwork-leftWind p{
   
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 30px;
   font-weight: 500;
   line-height: 33px;
@@ -528,7 +810,7 @@ letter-spacing: 0em;
   
 }
 .secondSection .secondSectionRight p{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 23px;
   font-weight: 500;
   line-height: 32px;
@@ -564,6 +846,10 @@ letter-spacing: 0em;
   background-color: #1F1F1F;
   padding: 55px 48px;
 }
+.InquiriesSectionSupport{
+  background-color: #1F1F1F;
+  padding: 55px 48px;
+}
 .CultivateSection{
   background-color: #1F1F1F;
   background-image: linear-gradient(to right, rgb(0 0 0 / 44%), rgb(0 0 0 / 32%)), url(./components/assets/banner/Cultivate.png);
@@ -577,7 +863,7 @@ letter-spacing: 0em;
   color: white;
 }
 .CultivateSection h2{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 64px;
   font-weight: 900;
   line-height: 89px;
@@ -586,7 +872,7 @@ letter-spacing: 0em;
   
 }
 .CultivateSection p{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 15px;
   font-weight: 500;
   line-height: 21px;
@@ -594,7 +880,7 @@ letter-spacing: 0em;
   text-align: left;  
 }
 .InquiriesSection h2{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 40px;
   font-weight: 900;
   /* line-height: 89px; */
@@ -603,6 +889,18 @@ letter-spacing: 0em;
   background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.InquiriesSectionSupport h2{
+  font-family: "Urbanist", sans-serif;
+  font-size: 40px;
+  font-weight: 900;
+  color: white;
+  /* line-height: 89px; */
+  /* letter-spacing: 0em; */
+  text-align: left;
+  /* background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF); */
+  /* -webkit-background-clip: text; */
+  /* -webkit-text-fill-color: transparent;
 }
 .InquiriesSection .contactUs{
   border: 4px solid;
@@ -618,6 +916,13 @@ letter-spacing: 0em;
   border-radius: 2px;
   border-image-slice: 1 !important;
   border-width: 7px !important;
+  /* border-radius: 32px; */
+}
+.InquiriesSectionSupport .border-gradient {
+  border: 3px solid !important;
+  border-radius: 2px;
+  border-image-slice: 1 !important;
+  border-width: 0px !important;
   /* border-radius: 32px; */
 }
 .border-gradientFooter {
@@ -669,6 +974,9 @@ letter-spacing: 0em;
 .border-gradient-purple {
   border-image-source: linear-gradient(to right, #FFE600 -32.66%, #FF3D00 101.88%) !important;
 }
+.InquiriesSectionSupport .border-gradient-purple {
+  border-image-source: linear-gradient(to right, #FFE600 -32.66%, #FF3D00 101.88%) !important;
+}
 .border-gradient-purpleFooter {
   border-image-source: linear-gradient(to right, #FFE600 -32.66%, #FF3D00 101.88%) !important;
 }
@@ -684,7 +992,13 @@ letter-spacing: 0em;
   border-radius: 40px;
 }
 .inputBg {
+  padding: 20px;
   background: #000;
+  box-shadow: 12px 0px 25px -8px rgba(224, 175, 207, 0.5);
+}
+.InquiriesSectionSupport .inputBg {
+  padding: 20px;
+  background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%) !important;
   box-shadow: 12px 0px 25px -8px rgba(224, 175, 207, 0.5);
 }
 .contactUs.border-gradient.inputBg p{
@@ -703,6 +1017,22 @@ color: #FFFFFF;
   justify-content: center;
   align-items: center;
 }
+.contactUsContact.border-gradient.inputBg p{
+  font-family: Poppins;
+font-size: 20px;
+font-weight: 400;
+line-height: 43px;
+letter-spacing: 0em;
+text-align: center;
+color: #FFFFFF;
+}
+.contactUsTitleContact {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
 .col-lg-6.oursolarworker {
   text-align: left;
 }
@@ -714,6 +1044,15 @@ color: #FFFFFF;
   color: white !important;
 }
 .contactUs .form-control {
+  background: none !important;
+  border: none !important;
+  border-bottom: 2px solid #fff !important;
+  border-radius: 0px !important;
+  color: white !important;
+  font-weight: 900 !important;
+  padding: 0px !important;
+}
+.contactUsContact .form-control {
   background: none !important;
   border: none !important;
   border-bottom: 2px solid #fff !important;
@@ -802,8 +1141,24 @@ path:hover, circle:hover {
 }
 .leaflet-container {
   border-radius: 20px;
-  background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%) !important;
+  background: linear-gradient(to right, #FFE600 -32.66%, #FF3D00 101.88%) !important;
   outline-offset: 1px;
+}
+.InquiriesSectionSupport .contactUsContact .leaflet-container {
+  border-radius: 20px;
+  background: linear-gradient(98.82deg, #ffe60000 -52.77%, #ff3d0000 125.07%) !important;
+  outline-offset: 1px;
+}
+.InquiriesSectionSupport .contactUsContact path.leaflet-interactive {
+  stroke: white;
+  stroke-width: 1;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #303030;
+  position: relative;
+  z-index: 999;
+  opacity: revert-layer;
+  background: none;
 }
 .leaflet-control-zoom.leaflet-bar.leaflet-control {
   display: none;
@@ -848,14 +1203,16 @@ path:hover, circle:hover {
 .card{
   padding: 20px;
   background: transparent !important;
-  border-color: white !important;
+  border-color: transparent !important;
 }
 .card:hover{
-  padding: 20px;
+  padding: 10px;
   background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%) !important;
   border-color: none !important;
-  animation: fadeIn 5s;
+  animation: fadeIn 2s;
   transition-duration: 0.2s;
+  cursor: pointer;
+  transform: scale(1.1);
 }
 .card .card-body p{
   color: white;
@@ -892,7 +1249,7 @@ path:hover, circle:hover {
   justify-content: flex-end;
 }
 .count-box span:hover {
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 121px;
   font-weight: 900;
   /* line-height: 25px; */
@@ -909,7 +1266,7 @@ path:hover, circle:hover {
   cursor: pointer;
 }
 .count-box span {
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 121px;
   font-weight: 900;
   /* line-height: 25px; */
@@ -933,7 +1290,7 @@ path:hover, circle:hover {
   position: relative;
 }
 .count-box p{
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
 font-size: 18px;
 font-weight: 700;
 line-height: 23px;
@@ -952,7 +1309,7 @@ section.vtvEnergy .bgvtv{
 }
 section.vtvEnergy .bgvtv h2{
  
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 80px;
   font-weight: 900;
   /* line-height: 25px; */
@@ -974,7 +1331,7 @@ section.aboutVtv .engineeringServicesmain .serviceEn h2{
   padding-bottom: 5px;
   width: fit-content;
   border-bottom: 2px solid white;
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
   font-size: 55px;
   font-weight: 700;
   margin-bottom: 20px;
@@ -990,7 +1347,7 @@ section.aboutVtv .engineeringServicesmain .box-innertab {
   flex-direction: column;
 }
 section.aboutVtv .engineeringServicesmain .box-innertab h2 {
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
 font-size: 36px;
 font-weight: 900;
 line-height: 40px;
@@ -999,7 +1356,7 @@ text-align: left;
 color: #ffffff;
 }
 section.aboutVtv .engineeringServicesmain .box-innertab p {
-  font-family: Urbanist;
+  font-family: "Urbanist", sans-serif;
 font-size: 28px;
 font-weight: 400;
 line-height: 40px;
@@ -1041,6 +1398,16 @@ color: #ffffff;
 }
 .engineeringServicesmain ul.mb-3.nav.nav-tabs {
   border: none;
+}
+.missionButton{
+  background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%);
+  border: none;
+  border-radius: 3px;
+  padding: 15px 30px;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 20px;
 }
 section.aboutVtv .engineeringServicesmain .image-container {
   position: relative;
@@ -1250,4 +1617,35 @@ section.whyVtv .service#design:hover img {
 }
 section.whyVtv .service#proposal:hover img {
   content: url('./components/assets/images/ProposalWhite.png');
+}
+section.map-inquiry h3{
+font-size: 20px;
+font-weight: 500;
+line-height: 43px;
+letter-spacing: 0em;
+text-align: left;
+color: white;
+margin: 0px;
+}
+section.map-inquiry .map{
+  padding: 50px;
+}
+section.map-inquiry .map img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+section.map-inquiry .gradientCurrentLocation{
+  background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%);
+  height: 20px;
+  width: 50px;
+  border-radius: 26px;
+}
+section.map-inquiry h2{
+font-size: 36px;
+font-weight: 700;
+line-height: 43px;
+letter-spacing: 0em;
+text-align: center;
+color: #FFFFFF;
 }
