--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,17 @@ nav.navbar {
   .hero-right{
     height: 50vh !important;
   }
+  button.navbar-toggler{
+    border: 1px solid white;
+
+  }
+  section.vtvEnergy {
+    padding: 15px 15px !important;
+}
+  .navbar{
+    
+    --bs-navbar-toggler-icon-bg: url(data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='%23FFFFFF' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>) !important;
+  }
   .engineeringServices {
     padding: 15px 15px 46px !important;
 }
@@ -1425,6 +1436,7 @@ section.aboutVtv .engineeringServicesmain .image-prev, section.aboutVtv .enginee
   transition: transform 0.3s ease-in-out;
 }
 section.aboutVtv .engineeringServicesmain .image-active {
+  box-shadow: -4px 2px 7px 0px #181616;
   transform: translateX(4%);
   z-index: 0;
 }
@@ -1440,6 +1452,7 @@ section.aboutVtv .engineeringServicesmain .image-prev {
 }
 
 section.aboutVtv .engineeringServicesmain .image-next {
+  box-shadow: -4px 2px 7px 0px #181616;
   transform: translateX(10%);
   z-index: 2;
 }
@@ -1462,7 +1475,8 @@ section.aboutVtv .engineeringServicesmain .image-next {
 }
 .carddff {
   height: 379px;
-  width: 300px;
+  /* width: 300px; */
+  cursor: pointer;
   background: #808080;
   border-radius: 10px;
   transition: background 0.8s;
