--- a/src/index.css
+++ b/src/index.css
@@ -211,6 +211,9 @@ section.whyVtv{
 section.featureProjects h2 {
   font-size: 30px !important;
 }
+section.last-sec h2 {
+  font-size: 30px !important;
+}
 .featureProjects ul.mb-3.nav.nav-tabs{
   float: right !important;
 }
@@ -265,6 +268,9 @@ section.map-inquiry .col-lg-12.col-md-6.col-sm-12>div{
 }
 .hero-leftWind{
   height: 365px !important;
+}
+section.last-sec .swiper-slide>div{
+  width: auto !important;
 }
 }
 /* responsive end */
@@ -1473,6 +1479,31 @@ section.aboutVtv .engineeringServicesmain .image-next {
 .borderSEC:hover {
   border: 1px solid #fff;
 }
+
+section.last-sec .swiper-slide.swiper-slide-next>div{
+  height: 368px !important;
+}
+section.last-sec .swiper-wrapper {
+  justify-content: center;
+  width: max-content;
+}
+section.last-sec .swiper-slide>div img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+section.last-sec .swiper-slide>div{
+  width: 284px ;
+  height: 284px !important;
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+  background: linear-gradient(98.82deg, #FFE600 -52.77%, #FF3D00 125.07%) !important;
+  padding: 5px !important;
+
+}
+.swiper-pagination-bullet{
+  background: white !important;
+}
 .carddff {
   height: 379px;
   /* width: 300px; */
@@ -1487,6 +1518,17 @@ section.aboutVtv .engineeringServicesmain .image-next {
   justify-content: center;
   align-items: center;
   position: relative;
+}
+section.last-sec h2{
+  text-align: left;
+  font-family: "Urbanist", sans-serif;
+  font-size: 55px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  background: linear-gradient(125.75deg, #FFE600 -16.5%, #FF3D00 93.09%), linear-gradient(0deg, #FFFFFF, #FFFFFF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
 }
 .card0 {
   background: url("https://i.pinimg.com/originals/ee/85/08/ee850842e68cfcf6e3943c048f45c6d1.jpg") center center no-repeat;
